--- a/TiendaGrupo15Progra3/Site1.Master
+++ b/TiendaGrupo15Progra3/Site1.Master
@@ -4,7 +4,7 @@
 
 <html>
 <head runat="server">
-    <title></title>
+    <title>SuperPremios</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,7 +12,35 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form id="form1" runat="server">
+      <form id="form1" runat="server">
+     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+         <div class="container-fluid">
+             <a class="navbar-brand" href="/">Podes ganar un monton de premios!</a>
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                 <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                     <li class="nav-item">
+                         <a class="nav-link active" aria-current="Default.aspx" href="/">Ingresa tu voucher</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="ElijeTuPremio.aspx">Premios</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="IngresaTusdatos.aspx">Registro</a>
+                     </li>
+                 </ul>
+             </div>
+        </div>
+    </nav>
+    <div class="container">
+        <hr />
+        <div>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder3" runat="server">
+            </asp:ContentPlaceHolder>
+        </div>
+    </div>
         <div>
             <h1>Juga y gana</h1>
 
@@ -23,5 +51,8 @@
 
         </div>
     </form>
+        <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
+
