--- a/TiendaGrupo15Progra3/Site1.Master
+++ b/TiendaGrupo15Progra3/Site1.Master
@@ -13,25 +13,14 @@
 </head>
 <body>
       <form id="form1" runat="server">
-     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+     <nav class="navbar navbar-expand-lg bg-danger">
          <div class="container-fluid">
+             <div class="navbar-header mx-auto">
              <a class="navbar-brand" href="/">Podes ganar un monton de premios!</a>
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
              </button>
-             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                     <li class="nav-item">
-                         <a class="nav-link active" aria-current="Default.aspx" href="/">Ingresa tu voucher</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link" href="ElijeTuPremio.aspx">Premios</a>
-                     </li>
-                     <li class="nav-item">
-                         <a class="nav-link" href="IngresaTusdatos.aspx">Registro</a>
-                     </li>
-                 </ul>
-             </div>
+            </div>
         </div>
     </nav>
     <div class="container">
@@ -42,7 +31,7 @@
         </div>
     </div>
         <div>
-            <h1>Juga y gana</h1>
+            <h1>Participa y gana</h1>
 
             <div class="container">
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
