--- a/TiendaGrupo15Progra3/Site1.Master
+++ b/TiendaGrupo15Progra3/Site1.Master
@@ -10,19 +10,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<style>
+       
+        .btn-custom 
+        { 
+            background-color: black; 
+            border-color: yellow; 
+            color: white; 
+
+        } 
+        .form-custom 
+        { 
+            background-color: #f8f9fa; 
+            padding: 30px; 
+            border-radius: 5px; 
+
+        } 
+        .header-custom 
+        { 
+            color: blue; 
+
+        }
+    </style>
 </head>
 <body>
       <form id="form1" runat="server">
-     <nav class="navbar navbar-expand-lg bg-danger">
-         <div class="container-fluid">
-             <div class="navbar-header mx-auto">
-             <a class="navbar-brand" href="/">Podes ganar un monton de premios!</a>
-             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                 <span class="navbar-toggler-icon"></span>
-             </button>
-            </div>
+        
+        <div class="container mt-4">
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>
         </div>
-    </nav>
     <div class="container">
         <hr />
         <div>
@@ -31,7 +47,7 @@
         </div>
     </div>
         <div>
-            <h1>Participa y gana</h1>
+          
 
             <div class="container">
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
