--- a/TiendaGrupo15Progra3/Site1.Master
+++ b/TiendaGrupo15Progra3/Site1.Master
@@ -34,13 +34,56 @@
     </style>
 </head>
 <body>
+     <!--NAVBAR PARA MODIFICAR Y HACER LAS URL-->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Marcas</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/ElegirProducto.aspx">Productos</a>
+            </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Mejores Ofertas
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Precios mas bajos</a></li>
+            <li><a class="dropdown-item" href="#">Descuentos increibles</a></li>
+            <li><a class="dropdown-item" href="#">Super Ofertas del dia</a></li>
+          </ul>
+        </li>
+
+            <li class="nav-item">
+            <a class="nav-link" href="/Login.aspx">Login</a>
+            </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+      
       <form id="form1" runat="server">
+
+          
         
         <div class="container mt-4">
             <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>
         </div>
     <div class="container">
-        <hr />
+       
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder3" runat="server">
             </asp:ContentPlaceHolder>
@@ -57,7 +100,6 @@
         </div>
     </form>
         <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+    </body>
 </html>
 
